# vscode-cpp-dev-tools

./: CMakeLists.txt  README.md
.devcontainer/ian/: Dockerfile  devcontainer.json  docker-compose.yml  statistics-developer.Dockerfile
docs/: statistics_test_no-diff-filter.txt  statistics_test_valgrind.txt
docs/statistics_coverage_report/: coverage_report.StatisticsAccumulator.cpp.cbd4aee04af6395a05800b863af5f5f5.html  coverage_report.StatisticsReport.cpp.bec50728677f9f5c3103ac037789459f.html  coverage_report.StatisticsReportsHelpers.cpp.01782ce09844c5d996db01c347dc4a08.html  coverage_report.StatisticsUtilities.cpp.5690dfebc2ff67227e1d467c0cecb4ed.html  coverage_report.html  coverage_report.xml
examples/: CMakeLists.txt  HelloParallelStatistics.cpp  HelloStatistics.cpp  ParallelStatistics.hpp
src/: CMakeLists.txt
src/headers/stats/: StatisticsAccumulator.hpp  StatisticsReport.hpp
src/lib/: StatisticsAccumulator.cpp  StatisticsReport.cpp
tst/: CMakeLists.txt  StatisticsAccumulatorTest.cpp  StatisticsExtremeStressTest.cpp  StatisticsReportTest.cpp  StatisticsStressTest.cpp
